<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layoutTela">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblPerimetro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_perimetro"
            android:visibility="gone" />

        <TextView
            android:id="@+id/lblValorPerimetro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/lblArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_area"
            android:visibility="gone" />

        <TextView
            android:id="@+id/lblValorArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/lblNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_nome"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edtNomeArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ivMap"
            android:visibility="gone" />

    </LinearLayout>


    <Button
        android:id="@+id/btnSalvarPonto"
        style="@style/btnLargo"
        android:text="@string/salvar_ponto" />

    <Button
        android:id="@+id/btnFinalizar"
        style="@style/btnLargo"
        android:text="@string/finalizar" />

    <Button
        android:id="@+id/btnSalvar"
        style="@style/btnLargo"
        android:text="@string/salvar"
        android:visibility="gone" />

</LinearLayout>